# UR5MoveitControl

./: README.md
Universal_Robots_ROS_Driver/ur_controllers/src/: speed_scaling_state_controller.cpp
Universal_Robots_ROS_Driver/ur_robot_driver/launch/: ur3_bringup.launch
Universal_Robots_ROS_Driver/ur_robot_driver/scripts/: io_interface.py  test_io.py
kw_ur5_control/: .gitignore  README.md
kw_ur5_control/kuawei_msgs/: CMakeLists.txt  package.xml
kw_ur5_control/kuawei_msgs/srv/: GetEndEffectorPose.srv  GetJointState.srv  SetArmPose.srv  SetArmStates.srv  SetGripperState.srv  SetPlacePoseArray.srv
kw_ur5_control/kw_ur5_MoveitConfig/: .setup_assistant  CMakeLists.txt  package.xml
kw_ur5_control/kw_ur5_MoveitConfig/config/: kinematics.yaml  kw_ur5_robot.srdf  ros_controllers.yaml
kw_ur5_control/kw_ur5_MoveitConfig/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  kw_ur5_robot_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
kw_ur5_control/kw_ur5_description/: CMakeLists.txt  package.xml
kw_ur5_control/kw_ur5_description/launch/: kw_ur5_upload.launch
kw_ur5_control/kw_ur5_driver/: CMakeLists.txt  package.xml
kw_ur5_control/kw_ur5_moveit_usage/: CMakeLists.txt  package.xml
kw_ur5_control/kw_ur5_usage/: CMakeLists.txt  Gripper.py  KwRobot.py  RobotArm.py  main.py  package.xml  util.py
robotiq/robotiq_arg2f_model_visualization/: package.xml
robotiq_85_gripper/robotiq_85_bringup/: CMakeLists.txt
robotiq_85_gripper/robotiq_85_description/: CMakeLists.txt
robotiq_85_gripper/robotiq_85_driver/: CMakeLists.txt
robotiq_85_gripper/robotiq_85_moveit_config/: CMakeLists.txt
robotiq_85_gripper/robotiq_85_msgs/: CMakeLists.txt
(+23 files in other folders)
